[package]
name = "mod_exp_in_range"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
num-bigint = {version = "0.4.4", features = [ "serde" ]}
num-traits = "0.2.16"
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.18.0", default-features = false, features = [ "std" ] }
serde = "1.0.188"
